@@ -7,39 +7,42 @@ import org.springframework.web.bind.annotation.GetMapping;
 import org.springframework.web.bind.annotation.RequestMapping;
 import org.springframework.web.bind.annotation.RequestParam;
 import org.springframework.web.bind.annotation.RestController;
+import ru.bowling.bowlingapp.DTO.EquipmentCategoryDTO;
 import ru.bowling.bowlingapp.DTO.EquipmentComponentDTO;
-import ru.bowling.bowlingapp.Entity.EquipmentComponent;
-import ru.bowling.bowlingapp.Repository.EquipmentComponentRepository;
+import ru.bowling.bowlingapp.Service.EquipmentCategoryService;
 
 import java.util.List;
-import java.util.stream.Collectors;
 
 @RestController
 @RequestMapping("/api/equipment/components")
 @RequiredArgsConstructor
 public class EquipmentComponentController {
 
-    private final EquipmentComponentRepository equipmentComponentRepository;
+    private final EquipmentCategoryService equipmentCategoryService;
 
     @GetMapping
     @PreAuthorize("hasAnyRole('MECHANIC','HEAD_MECHANIC','CLUB_MANAGER','CLUB_OWNER','ADMIN')")
-    public ResponseEntity<List<EquipmentComponentDTO>> getComponents(@RequestParam(value = "parentId", required = false) Long parentId) {
-        List<EquipmentComponentDTO> components = equipmentComponentRepository.findAll().stream()
-                .filter(c -> parentId == null || (c.getParent() != null && parentId.equals(c.getParent().getComponentId())))
-                .map(this::toDto)
-                .collect(Collectors.toList());
+    public ResponseEntity<List<EquipmentComponentDTO>> getComponents(
+            @RequestParam(value = "brand", required = false) String brand,
+            @RequestParam(value = "parentId", required = false) Long parentId,
+            @RequestParam(value = "level", required = false) Integer level) {
+
+        List<EquipmentComponentDTO> components = equipmentCategoryService.getCategories(brand, parentId, level).stream()
+                .map(this::fromCategory)
+                .toList();
+
         return ResponseEntity.ok(components);
     }
 
-    private EquipmentComponentDTO toDto(EquipmentComponent component) {
+    private EquipmentComponentDTO fromCategory(EquipmentCategoryDTO category) {
         return EquipmentComponentDTO.builder()
-                .componentId(component.getComponentId())
-                .name(component.getName())
-                .manufacturer(component.getManufacturer())
-                .category(component.getCategory())
-                .code(component.getCode())
-                .notes(component.getNotes())
-                .parentId(component.getParent() != null ? component.getParent().getComponentId() : null)
+                .componentId(category.getId())
+                .name(category.getNameRu())
+                .manufacturer(category.getBrand())
+                .category(category.getNameEn())
+                .code(null)
+                .notes(null)
+                .parentId(category.getParentId())
                 .build();
     }
 }
